--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,10 @@
       <nav class="retro-navbar">
         <%= link_to 'Home', root_path %>
         <%= link_to 'Projects', projects_path %>
+        <%= link_to 'Leaderboard', leaderboard_path %>
         <div style="flex:1"></div>
         <% if logged_in? %>
-          <%= link_to current_user.name || current_user.email, profile_path, class: 'btn-retro btn-retro--outline' %>
+          <%= link_to current_user.name || current_user.email, user_profile_path(current_user), class: 'btn-retro btn-retro--outline' %>
 
           <!-- ensure Turbo/JS will send DELETE; also provide a <noscript> fallback -->
           <%= link_to 'Sign out', logout_path, data: { turbo_method: :delete }, id: 'sign_out_btn' %>
