fix: Enable leaderboard button in home actions

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -118,7 +118,7 @@
       <%= link_to "My Projects", projects_path, class: 'btn-retro' %>
       <%= link_to "Store", products_path, class: 'btn-retro' %>
       <%= link_to "My Orders", orders_path, class: 'btn-retro' %>
-      <%= link_to "Leaderboard", leaderboards_path, class: 'btn-retro-disabled', disabled: true %>
+      <%= link_to "Leaderboard", leaderboards_path, class: 'btn-retro' %>
       <% if admin? %>
         <%= link_to "Admin Dashboard", admin_dashboard_path, class: 'btn-retro' %>
       <% end %>
