--- a/app/views/admin/ships/index.html.erb
+++ b/app/views/admin/ships/index.html.erb
@@ -16,8 +16,8 @@
     <% @ships.each do |s| %>
       <tr>
         <td><%= link_to s.id, admin_ship_path(s) %></td>
-        <td><%= link_to s.project.name, admin_project_path(s.project) %></td>
-        <td><%= s.project.user&.name %></td>
+        <td><%= s.project ? link_to(s.project.name, admin_project_path(s.project)) : "Project ##{s.project_id || 'unknown'}" %></td>
+        <td><%= s.project&.user&.name || s.project&.user&.email || '-' %></td>
         <td><%= s.shipped_at %></td>
         <td><%= format_duration(s.devlogged_seconds.to_i) %></td>
         <td><%= correct_credits(s.credits_awarded) %></td>
